（重要）修复ZipArchive文件解析漏洞 咕了。跑去研究STM32和其它嵌入式应用了 C99是真垃圾
改了改Crypto，方便以后集成AES-NI指令集
加入AES_NI和FastJNI（WIP）

加入第二代数据库接口
支持静态方法作为as或user序列化器了
HTTP协议现已支持在接收请求体的过程中不间断的发送数据
修改Http2类结构，删掉Manager，直接继承就好
修复粘贴多行指令只渲染最后一行的问题
修复headless env使用剪贴板的问题
删掉一些不正确的断言